set (HEADER_FILES
    Animation/AnimationAdapter.h
    Animation/AnimationControllerAdapter.h
    Animation/AnimationToolBarAdapter.h
    Layer/AnnotationLayerAdapter.h
    Layer/AoiLayerAdapter.h
    Layer/ClassificationLayerAdapter.h
    Layer/CustomLayerAdapter.h
    Layer/CustomLayerImp.h
    Layer/GcpLayerAdapter.h
    Layer/GraphicLayerAdapter.h
    Layer/LatLonLayerAdapter.h
    Layer/MeasurementLayerAdapter.h
    Layer/PseudocolorLayerAdapter.h
    Layer/RasterLayerAdapter.h
    Layer/ThresholdLayerAdapter.h
    Layer/TiePointLayerAdapter.h
    Plot/ArrowAdapter.h
    Plot/AxisAdapter.h
    Plot/CartesianGridlinesAdapter.h
    Plot/CartesianPlotAdapter.h
    Plot/CurveAdapter.h
    Plot/CurveCollectionAdapter.h
    Plot/GridlinesAdapter.h
    Plot/HistogramAdapter.h
    Plot/HistogramPlotAdapter.h
    Plot/HistogramWindowAdapter.h
    Plot/LocatorAdapter.h
    Plot/PlotGroupAdapter.h
    Plot/PlotObjectAdapter.h
    Plot/PlotSetAdapter.h
    Plot/PlotSetGroupAdapter.h
    Plot/PlotViewAdapter.h
    Plot/PlotWidgetAdapter.h
    Plot/PointAdapter.h
    Plot/PointSetAdapter.h
    Plot/PolarGridlinesAdapter.h
    Plot/PolarPlotAdapter.h
    Plot/PolygonPlotObjectAdapter.h
    Plot/RegionObjectAdapter.h
    Plot/SignaturePlotAdapter.h
    Plot/TextAdapter.h
    AnimationModel.h
    ContextMenuImp.h
    DesktopServicesImp.h
    DockWindowAdapter.h
    ElementModel.h
    FontImp.h
    LayerListAdapter.h
    MouseModeImp.h
    PlugInModel.h
    ProductViewAdapter.h
    ProductWindowAdapter.h
    ProductWindowImp.h
    SessionExplorerAdapter.h
    SessionItemModel.h
    SpatialDataViewAdapter.h
    SpatialDataWindowAdapter.h
    ToolBarAdapter.h
    ViewWindowImp.h
    WindowImp.h
    WindowModel.h
    WorkspaceWindowAdapter.h
)
set (SOURCE_FILES
    Animation/AnimationAdapter.cpp
    Animation/AnimationControllerAdapter.cpp
    Animation/AnimationControllerImp.cpp
    Animation/AnimationImp.cpp
    Animation/AnimationServicesImp.cpp
    Animation/AnimationToolBarAdapter.cpp
    Animation/AnimationToolBarImp.cpp
    Layer/AnnotationLayerAdapter.cpp
    Layer/AnnotationLayerImp.cpp
    Layer/AoiLayerAdapter.cpp
    Layer/AoiLayerImp.cpp
    Layer/ClassificationLayerAdapter.cpp
    Layer/ClassificationLayerImp.cpp
    Layer/CustomLayerAdapter.cpp
    Layer/CustomLayerImp.cpp
    Layer/GcpLayerAdapter.cpp
    Layer/GcpLayerImp.cpp
    Layer/GraphicLayerAdapter.cpp
    Layer/GraphicLayerImp.cpp
    Layer/LatLonLayerAdapter.cpp
    Layer/LatLonLayerImp.cpp
    Layer/LayerImp.cpp
    Layer/MeasurementLayerAdapter.cpp
    Layer/MeasurementLayerImp.cpp
    Layer/PseudocolorLayerAdapter.cpp
    Layer/PseudocolorLayerImp.cpp
    Layer/RasterLayerAdapter.cpp
    Layer/RasterLayerImp.cpp
    Layer/ThresholdLayerAdapter.cpp
    Layer/ThresholdLayerImp.cpp
    Layer/TiePointLayerAdapter.cpp
    Layer/TiePointLayerImp.cpp
    Plot/ArrowAdapter.cpp
    Plot/ArrowImp.cpp
    Plot/AxisAdapter.cpp
    Plot/AxisImp.cpp
    Plot/CartesianGridlinesAdapter.cpp
    Plot/CartesianGridlinesImp.cpp
    Plot/CartesianPlotAdapter.cpp
    Plot/CartesianPlotImp.cpp
    Plot/CurveAdapter.cpp
    Plot/CurveImp.cpp
    Plot/CurveCollectionAdapter.cpp
    Plot/CurveCollectionImp.cpp
    Plot/GridlinesAdapter.cpp
    Plot/GridlinesImp.cpp
    Plot/HistogramAdapter.cpp
    Plot/HistogramImp.cpp
    Plot/HistogramPlotAdapter.cpp
    Plot/HistogramPlotImp.cpp
    Plot/HistogramWindowAdapter.cpp
    Plot/HistogramWindowImp.cpp
    Plot/Legend.cpp
    Plot/LocatorAdapter.cpp
    Plot/LocatorImp.cpp
    Plot/PlotGroupAdapter.cpp
    Plot/PlotGroupImp.cpp
    Plot/PlotObjectImp.cpp
    Plot/PlotSetAdapter.cpp
    Plot/PlotSetGroupAdapter.cpp
    Plot/PlotSetImp.cpp
    Plot/PlotSetGroupImp.cpp
    Plot/PlotViewAdapter.cpp
    Plot/PlotViewImp.cpp
    Plot/PlotWidgetAdapter.cpp
    Plot/PlotWidgetImp.cpp
    Plot/PointAdapter.cpp
    Plot/PointImp.cpp
    Plot/PointSetAdapter.cpp
    Plot/PointSetImp.cpp
    Plot/PolarGridlinesAdapter.cpp
    Plot/PolarGridlinesImp.cpp
    Plot/PolarPlotAdapter.cpp
    Plot/PolarPlotImp.cpp
    Plot/PolygonPlotObjectAdapter.cpp
    Plot/PolygonPlotObjectImp.cpp
    Plot/RegionObjectAdapter.cpp
    Plot/RegionObjectImp.cpp
    Plot/SignaturePlotAdapter.cpp
    Plot/SignaturePlotImp.cpp
    Plot/StatisticsWidget.cpp
    Plot/TextAdapter.cpp
    Plot/TextImp.cpp
    AnimationModel.cpp
    ContextMenuImp.cpp
    DesktopServicesImp.cpp
    DockWindowAdapter.cpp
    DockWindowImp.cpp
    ElementModel.cpp
    FontImp.cpp
    LayerListAdapter.cpp
    LayerListImp.cpp
    MouseModeImp.cpp
    OrthographicViewImp.cpp
    PerspectiveViewImp.cpp
    PlugInModel.cpp
    ProductViewAdapter.cpp
    ProductViewImp.cpp
    ProductWindowAdapter.cpp
    ProductWindowImp.cpp
    SessionExplorerAdapter.cpp
    SessionExplorerImp.cpp
    SessionItemModel.cpp
    SpatialDataViewAdapter.cpp
    SpatialDataViewImp.cpp
    SpatialDataWindowAdapter.cpp
    SpatialDataWindowImp.cpp
    ToolBarAdapter.cpp
    ToolBarImp.cpp
    ViewImp.cpp
    ViewWindowImp.cpp
    WindowImp.cpp
    WindowModel.cpp
    WorkspaceWindowAdapter.cpp
    WorkspaceWindowImp.cpp
) 
set (MOC_HEADERS
    Animation/AnimationControllerImp.h
    Animation/AnimationImp.h
    Animation/AnimationServicesImp.h
    Animation/AnimationToolBarImp.h
    Layer/AnnotationLayerImp.h
    Layer/AoiLayerImp.h
    Layer/ClassificationLayerImp.h
    Layer/CustomLayerImp.h
    Layer/GcpLayerImp.h
    Layer/GraphicLayerImp.h
    Layer/LatLonLayerImp.h
    Layer/LayerImp.h
    Layer/MeasurementLayerImp.h
    Layer/PseudocolorLayerImp.h
    Layer/RasterLayerImp.h
    Layer/ThresholdLayerImp.h
    Layer/TiePointLayerImp.h
    Plot/ArrowImp.h
    Plot/AxisImp.h
    Plot/CartesianGridlinesImp.h
    Plot/CartesianPlotImp.h
    Plot/CurveImp.h
    Plot/CurveCollectionImp.h
    Plot/GridlinesImp.h
    Plot/HistogramImp.h
    Plot/HistogramPlotImp.h
    Plot/HistogramWindowImp.h
    Plot/Legend.h
    Plot/LocatorImp.h
    Plot/PlotGroupImp.h
    Plot/PlotObjectImp.h
    Plot/PlotSetGroupImp.h
    Plot/PlotSetImp.h
    Plot/PlotViewImp.h
    Plot/PlotWidgetImp.h
    Plot/PointImp.h
    Plot/PointSetImp.h
    Plot/PolarGridlinesImp.h
    Plot/PolarPlotImp.h
    Plot/PolygonPlotObjectImp.h
    Plot/RegionObjectImp.h
    Plot/SignaturePlotImp.h
    Plot/StatisticsWidget.h
    Plot/TextImp.h
    DockWindowImp.h
    LayerListImp.h
    OrthographicViewImp.h
    PerspectiveViewImp.h
    ProductViewImp.h
    SessionExplorerImp.h
    SpatialDataViewImp.h
    SpatialDataWindowImp.h
    ToolBarImp.h
    ViewImp.h
    WorkspaceWindowImp.h
)
if(ONE_OPTICKS_LIB)
    set_property(DIRECTORY PROPERTY ALL_SOURCES ${SOURCE_FILES} ${HEADER_FILES})
    set_property(DIRECTORY PROPERTY MOC_HEADERS ${MOC_HEADERS})
else()
    qt4_wrap_cpp(MOC_OUTFILES ${MOC_HEADERS})
    source_group(moc FILES ${MOC_OUTFILES})
    source_group(Animation REGULAR_EXPRESSION Animation.*)
    source_group(Layer REGULAR_EXPRESSION Layer.*)
    source_group(Plot REGULAR_EXPRESSION Plot.*) 
    add_library(Desktop STATIC ${SOURCE_FILES} ${HEADER_FILES} ${MOC_HEADERS} ${MOC_OUTFILES})	
endif()

